# colosseum-oran-frl-demo

./: .gitattributes  .gitignore  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  commit_message.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: index.md  mkdocs.yml
kubernetes/: server-deployment.yaml
notebooks/: 01_Data_Preparation.ipynb  02_FRL_Training.ipynb
outputs/: config.json
parquet file for test/: kpi_traces_final_robust.parquet  kpi_traces_final_v_robust.parquet
scripts/: make_dataset.py  train.py
src/colosseum_oran_frl_demo/: __init__.py  config.py
src/colosseum_oran_frl_demo/agents/: fed_server.py  rl_agent.py
src/colosseum_oran_frl_demo/data/: dataset.py  validate.py
src/colosseum_oran_frl_demo/envs/: slice_sim_env.py
src/colosseum_oran_frl_demo/utils/: plots.py
tests/: test_agents.py  test_config.py  test_dataset.py  test_edge_cases.py  test_env.py  test_fed_server.py  test_integration.py  test_new.py  test_validate.py
