# 檔案：pyproject.toml

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "colosseum_oran_frl_demo"
version = "0.0.1"
# 修正：與 requirements.txt 完全同步，並移除不再需要的 gymnasium
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "pyarrow>=15.0",
    "tqdm>=4.66",
    "torch>=2.1",
    "matplotlib>=3.8",
    "dataclasses-json>=0.6"
]
description = "Offline Federated RL for O-RAN slice resource management on Colosseum traces"
authors = [
  { name = "Hsiu-Chi Tsai" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
# 修正：擴大 Python 版本支援，與 CI/CD 流程及 README 文件保持一致
requires-python = ">=3.9, <3.12"

[project.scripts]
# 修正：確保這些腳本進入點在對應的 Python 檔案中有被定義
make-dataset = "colosseum_oran_frl_demo.data.dataset:cli"
frl-train    = "scripts.train:main"

[tool.ruff]
line-length = 99
src = ["colosseum_oran_frl_demo"]
include = ["pyproject.toml", "colosseum_oran_frl_demo/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["colosseum_oran_frl_demo"]
force-sort-within-sections = true
