# 檔案: pyproject.toml

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "colosseum_oran_frl_demo"
version = "0.0.1"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "pyarrow>=15.0",
    "tqdm>=4.66",
    "torch>=2.1",
    "matplotlib>=3.8",
    "dataclasses-json>=0.6"
]
description = "Offline Federated RL for O-RAN slice resource management on Colosseum traces"
authors = [
  { name = "Hsiu-Chi Tsai" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.9, <3.12"

[project.scripts]
make-dataset = "colosseum_oran_frl_demo.data.dataset:cli"
frl-train    = "scripts.train:main"

# 修正：新增此區塊來管理開發相依性
[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "nbmake"
]

[tool.ruff]
line-length = 99
src = ["colosseum_oran_frl_demo"]
include = ["pyproject.toml", "colosseum_oran_frl_demo/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["colosseum_oran_frl_demo"]
force-sort-within-sections = true
